# rex

./: .travis.yml  Cargo.toml  LICENSE-MIT  README.md
rex_utils/: Cargo.toml  README.md
rex_utils/src/: iter_optional.rs  lib.rs  rect.rs  relative_rect.rs  signals.rs  split_vec.rs
src/: bench.rs  buffer.rs  config.rs  filesystem.rs  lib.rs  main.rs  segment.rs  signals.rs  ui.rs  util.rs
src/bench/: editor.rs  mod.rs  support.rs  util.rs
src/frontend/: frontend_trait.rs  mod.rs  rustbox.rs
src/ui/: Help.txt  RustBoxEx.rs  common.rs  config.rs  configscreen.rs  input.rs  inputline.rs  menu.rs  mod.rs  overlay.rs  view.rs  widget.rs
src/util/: iter_optional.rs  mod.rs  rect.rs  relative_rect.rs  signals.rs  split_vec.rs
tests/: basic.rs  clipboard.rs  conf.rs  editing.rs  fs.rs  movement.rs  undo.rs
tests/util/: mock_filesystem.rs  mock_frontend.rs  mod.rs
