[package]
name = "rex"
version = "0.1.0"
authors = ["dbrodie@gmail.com"]
description = "A lean hex editor"
keywords = ["hex", "editor"]
repository = "https://github.com/dbrodie/rex"
license = "MIT"
readme = "README.md"

[dependencies]
rustc-serialize = "0.3"
itertools = "0.4"
log = "0.3"
env_logger = "0.3"
gag = "0.1"
toml = "0.1"
docopt = "0.6"
rustbox = "0.7.2"
odds = "0.2"
custom_derive = "0.1.2"
enum_derive = "0.1.3"
newtype_derive = "0.1.3"

[dependencies.rex_utils]
path = "rex_utils"

[dev-dependencies]
lazy_static = "0.1"
typenum = "1.0"
