[package]
name = "rex"
version = "0.1.0"
authors = ["dbrodie@gmail.com"]
description = "A lean hex editor"
keywords = ["hex", "editor"]
repository = "https://github.com/dbrodie/rex"
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
rustc-serialize = "0.3"
itertools = "0.4"
log = "0.3"
env_logger = "0.3"
gag = "0.1"
toml = "0.1"
docopt = "0.6"
rustbox = "0.8"
odds = "0.2"
custom_derive = "0.1.2"
enum_derive = "0.1.3"
newtype_derive = "0.1.3"
xdg = "^2.0"

[dev-dependencies]
lazy_static = "0.1"

[features]
nightly = []
